# outils_maison

./: .gitignore  CLAUDE.md  README.md  app.py  cotes_bibli.txt  pyproject.toml  ui.py
.streamlit/: config.toml
docs/: ARCHITECTURE.md  CADRAGE.md
notebooks_archive/: Convert_music.ipynb  Convertion_video2music.ipynb  Dicobat.ipynb  Folder2DataFrame.ipynb  Fonds_écran.ipynb  Videos_tools.ipynb  folder_to_list.ipynb  pdf_tools.ipynb  rename_image.ipynb  rename_mp3.ipynb  trie_cotes_biblio.ipynb
pages/: accueil.py  audio_convertir.py  audio_decouper.py  audio_extraire.py  audio_normaliser.py  audio_renommer.py  audio_tags.py  audio_volume.py  biblio_cotes.py  biblio_dispo.py  data_convertir.py  data_lignes.py  files_arborescence.py  files_clean.py  files_comparer.py  files_csv.py  files_doublons.py  files_html_md.py  files_ranger.py  files_remplacer.py  files_stats.py  fonds_audit.py  fonds_dedup.py  fonds_ecran.py  images_convertir.py  images_doublons.py  images_redimensionner.py  images_renumeroter.py  musique_catalogue.py  musique_nettoyer.py  musique_singles.py  musique_verifier.py  pdf_compresser.py  pdf_extract.py  pdf_fusionner.py  pdf_images.py  pdf_pages.py  pdf_securite.py  pdf_texte.py  traduction_traduire.py  (+8 more)
tests/: test_audio.py  test_biblio.py  test_bm_lyon.py  test_catalogue.py  test_clean_library.py  test_data.py  test_files.py  test_fonds.py  test_html_md.py  test_images.py  test_musique.py  test_pages.py  test_pdf.py  test_traduction.py  test_transcription.py  test_tts.py
tests/fixtures/: sample_math.html  sample_singlefile.html
tools/: __init__.py  audio.py  biblio.py  bm_lyon.py  catalogue.py  clean_library.py  data.py  ffmpeg_utils.py  files.py  fonds.py  html_md.py  images.py  musique.py  pdf.py  traduction.py  transcription.py  tts.py  video.py
tools/html_to_md/: __init__.py  convert.py  core.py  extract.py  hygiene.py  maths.py  naming.py  selectors.yaml
