[project]
name = "outils"
version = "0.1.0"
description = "Boîte à outils Streamlit : utilitaires locaux pour fichiers, médias et catalogues."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "pypdf>=5.0",
    "moviepy>=2.0",
    "mutagen>=1.47",
    "tqdm>=4.67",
    "pillow>=11.0",
    "imagehash>=4.3.2",
    "pymupdf>=1.28.0",
    "pillow-heif>=1.4.0",
    # Appariement de fonds d'écran paysage/portrait (SIFT + RANSAC). OpenCV
    # seul (~60 Mo), sans torch.
    "opencv-python>=4.10",
    # Vérification de disponibilité au catalogue BM Lyon (scraping).
    # Le navigateur s'installe séparément :  uv run playwright install chromium
    "playwright>=1.40",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ipykernel>=6.29",
]
