[project]
name = "outils"
version = "0.1.0"
description = "Boîte à outils Streamlit : utilitaires locaux pour fichiers, médias et catalogues."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "pypdf>=5.0",
    "moviepy>=2.0",
    "mutagen>=1.47",
    "tqdm>=4.67",
    "pillow>=11.0",
    "imagehash>=4.3.2",
    "pymupdf>=1.28.0",
    "pillow-heif>=1.4.0",
    # Appariement de fonds d'écran paysage/portrait (SIFT + RANSAC). OpenCV
    # seul (~60 Mo), sans torch.
    "opencv-python>=4.10",
    # Vérification de disponibilité au catalogue BM Lyon (scraping).
    # Le navigateur s'installe séparément :  uv run playwright install chromium
    "playwright>=1.40",
    # Synthèse vocale locale (Kokoro, Apache-2.0) sur CPU via onnxruntime, sans
    # PyTorch. Embarque espeak-ng (via espeakng-loader) pour le français : aucune
    # installation système. Le modèle (~340 Mo) se télécharge au 1er usage.
    "kokoro-onnx>=0.4",
    # Traduction hors-ligne (NLLB-200 distillé 600M) via CTranslate2 sur CPU,
    # sans PyTorch : ctranslate2 fait l'inférence, transformers ne sert que de
    # tokenizer. Le modèle (~600 Mo, int8) se télécharge au 1er usage.
    "ctranslate2>=4.0",
    "transformers>=4.40",
    "sentencepiece>=0.2",
    "huggingface-hub>=0.24",
    # Transcription audio/vidéo -> texte (Whisper) via CTranslate2, sans PyTorch.
    # `av` (PyAV) embarque ffmpeg pour décoder audio et vidéo. Le modèle se
    # télécharge au 1er usage.
    "faster-whisper>=1.1",
    # Conversion de captures HTML (SingleFile) -> Markdown propre. Moteur copié
    # dans tools/html_to_md/ (projet html_to_md) ; ci-dessous ses dépendances.
    "beautifulsoup4>=4.12",
    "lxml[html_clean]>=5.0",
    "readability-lxml>=0.8",
    "markdownify>=0.13",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Accélération GPU NVIDIA facultative :  uv sync --extra gpu
gpu = ["onnxruntime-gpu>=1.20"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ipykernel>=6.29",
]
